# ebay_alerts

./: .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  heroku.yml  pyproject.toml
apps/alerts/: emails.py  tasks.py  utils.py
apps/alerts/migrations/: 0001_initial.py  0002_auto_20201211_1205.py  0003_auto_20201212_1255.py  0004_auto_20201214_1513.py
apps/alerts/templates/: delete_email.html  ebay_results_email.txt  footer.txt
apps/alerts/tests/: test_ebay.py  test_model.py  test_serializers.py
ebay_alerts/: celery.py  docker-compose.yml  manage.py  pyproject.toml  tests_urls.py  urls.py  wsgi.py
ebay_alerts/apps/alerts/: ebay_data.py  emails.py  fake_ebay.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  utils.py  views.py
ebay_alerts/apps/alerts/migrations/: 0001_initial.py  0002_auto_20201211_1205.py  0003_auto_20201212_1255.py  0004_auto_20201214_1513.py
ebay_alerts/apps/alerts/templates/: create_email.html  create_email.txt  delete_email.html  delete_email.txt  ebay_results_email.html  ebay_results_email.txt  footer.html  footer.txt
ebay_alerts/apps/alerts/tests/: test_ebay.py  test_emails.py  test_model.py  test_serializers.py  test_views.py
ebay_alerts/ebay_alerts/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
ebay_alerts/ebay_alerts/settings/: base.py
ebay_alerts/nginx/: Dockerfile  nginx.conf
ebay_alerts/settings/: base.py
nginx/: nginx.conf
