[tool.poetry]
name = "ebay_alerts"
version = "0.1.0"
description = ""
authors = ["npujol <naivy.luna@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.4"
django-environ = "^0.4.5"
whitenoise = "^5.2.0"
gunicorn = "^20.0.4"
psycopg2 = "^2.8.6"
hypothesis = "^5.43.3"
djangorestframework = "^3.12.2"
drf-yasg = "^1.20.0"
celery = "^5.0.4"
redis = "^3.5.3"
django-celery-results = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
